--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@apollo/server": "^4.9.4",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"graphql-tag": "^2.12.6",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.3"
 	},
