--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@apollo/server": "^4.9.4",
 		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"graphql-tag": "^2.12.6",
+		"express-graphql": "^0.12.0",
+		"graphql": "^15.8.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.3"
 	},
